# AcmeInstrument

./: .gitignore  CMakeLists.txt  README.md
fft/: abs.csv  data.cpp  example1133.cpp  fft.cpp  fft.h  fft_helper.cpp  fft_helper.h  foo2.csv  foo3.csv  foo4.csv  sciency.cpp  sciency2.cpp  sciency3.cpp  sciency4.cpp  siney.cpp  test.cpp
src/: Analysis.cpp  acme_instrument.cpp  analysis.cpp  analysis.h  calc_fft.cpp  calc_fft.h  data.cpp  data.h  data_in.cpp  data_in.h  fftHelper.cpp  fftHelper.h  fourier.cpp  fourier.h  instrument.cpp  instrument.h  plotter..cpp  plotter.cpp  plotter.h  plotter2.cpp  plotter2.h
